# libusbm

./: Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  libusb.pc.in
examples/: Makefile.am  Makefile.in  benchmark.c  benchmark_rc.rc  mpl_test.c  testlibusb.c
libusb/: Makefile.am  Makefile.in  core_linux.c  mpl_threads.c  mpl_threads.h  ud_error.h  usb.h
